welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:4: error: value &&! is not a member of Boolean
while (!estSurBiscuit()&&!estFaceMur()) { 
                       ^